# scripts

./: .gitignore  Cargo.toml  Justfile  README.md  install  install.sh  install_global.sh
.cargo/: config
dump/: camera_copy.py
hooks/: post-merge
python/: fix_xonar_output  slow_tests
rust/: .gitignore  Cargo.toml  README.md
rust/scripts/: clean_names.rs  humanizer.rs
rust/src/: exec.rs  file.rs  lib.rs  path.rs  process.rs
shell/: Mixxx  add  aur-add  aur-rm  backlight  backlight.oil  backup  borg-backup  cataclysm-dda  change-sink  cleanup  close_special_workspace  convert-jpg  convert-to-mobi  diary  dim  dreams  fix-perms  folder-rename  git-diff-all  google-chat  has_window  hddcheck  hidpi  hotspot  hypr-close-special-workspace  hypr-has-window  hypr-keyboard-layout  i3lock-blur  keyboard-layout  lodpi  monitor  move_window_hack  mw  nuke_postgres  plex  postgres_memcache  pullall  random_clips.py  reencode  (+18 more)
src/: exec.rs  file.rs  fs.rs  i3status.rs  ip_addr.rs  lib.rs  logging.rs  notify.rs  path.rs  process.rs  pw_dump.rs  ring.rs  table.rs  timer.rs
src/pipewire/: mod.rs  sink.rs
src/pipewire/schema/: device.rs  mod.rs  node.rs
src/schemas/: ip_addr.rs  mod.rs  pw_dump.rs
src/staggered_backups/: bracket.rs  config.rs  entry.rs  mod.rs  tests.rs
