[package]
name = "script-utils"
version = "0.1.0"
authors = ["Arne Beer <contact@arne.beer>"]
edition = "2021"

[lib]
name = "script_utils"
path = "src/lib.rs"

[profile.release]
lto = "thin"


[lints.clippy]
# This one is having too many false-positives and it makes the code harder to read.
assigning_clones = "allow"

[dependencies]
anyhow = "1"
better-panic = "0.3"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
crossterm = "0.27"
image = { version = "0.25", features = [
  "png",
  "jpeg",
  "rayon",
], default-features = false }
itertools = "0.13"
log = "0.4"
procfs = { version = "0.16", default-features = false }
rayon = "1"
regex = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_yaml = "0.9"
shellexpand = "3"
simplelog = { version = "0.12" }
strum = "0.26"
strum_macros = "0.26"
subprocess = "0.2"
tera = "1"
users = "0.11"
