[package]
name = "script-utils"
version = "0.1.0"
authors = ["Arne Beer <contact@arne.beer>"]
edition = "2018"

[[bin]]
name = "clean_names"
path = "scripts/clean_names.rs"

[[bin]]
name = "humanizer"
path = "scripts/humanizer.rs"

[lib]
name = "script_utils"
path = "src/lib.rs"

[dependencies]
anyhow = "^1"
better-panic = "^0.2"

clap = { version="3.0.0-rc.7", features=["derive"] }
clap_generate = "3.0.0-rc.7"
shellexpand = "^2"

chrono = "^0.4"
subprocess = "^0.2"
strum = "^0.23"
strum_macros = "^0.23"
