[package]
name = "script-utils"
version = "0.1.0"
authors = ["Arne Beer <contact@arne.beer>"]
edition = "2018"

[lib]
name = "script_utils"
path = "src/lib.rs"

[dependencies]
anyhow = "^1"
better-panic = "^0.3"

clap = { version="3", features=["derive"] }
shellexpand = "^2"
crossterm = "0.23"

serde = "1"
serde_json = "1"
serde_derive = "1"

chrono = "^0.4"
subprocess = "^0.2"
strum = "^0.24"
strum_macros = "^0.24"
